Created 'books' db and added tables

--- a/C.Peace_Books.ipynb
+++ b/C.Peace_Books.ipynb
@@ -31,17 +31,549 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b2380bf",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65361124",
+   "execution_count": 6,
+   "id": "faadfa63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy_utils import create_database, database_exists\n",
+    "import pymysql\n",
+    "\n",
+    "# settings\n",
+    "pymysql.install_as_MySQLdb()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecdafcad",
+   "metadata": {},
+   "source": [
+    "## Loading Data, Viewing the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "712b7ec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Gloria</td>\n",
+       "      <td>Rodriguez</td>\n",
+       "      <td>grodriquez@books.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Robin</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>Robin@books.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>JD@books.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id first_name  last_name                 email\n",
+       "2   3     Gloria  Rodriguez  grodriquez@books.com\n",
+       "1   2      Robin      Smith       Robin@books.com\n",
+       "0   1       John        Doe          JD@books.com"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The Shining</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Frankenstein</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>The Call of the Wild</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                 title  author_id\n",
+       "0   1           The Shining          1\n",
+       "5   6          Frankenstein          5\n",
+       "3   4  The Call of the Wild          3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>author_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Stephen King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>F.Scott Fitgerald</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Jane Austen</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id        author_name\n",
+       "0   1       Stephen King\n",
+       "1   2  F.Scott Fitgerald\n",
+       "3   4        Jane Austen"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>book_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  book_id\n",
+       "5        3        5\n",
+       "6        3        6\n",
+       "0        1        1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(6, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(7, 2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# loading csv files to DataFrames\n",
+    "users = pd.read_csv('users.csv')\n",
+    "books = pd.read_csv('books.csv')\n",
+    "authors = pd.read_csv('authors.csv')\n",
+    "favorites = pd.read_csv('favorites.csv')\n",
+    "\n",
+    "# checking dfs\n",
+    "display(users.sample(3), books.sample(3), \n",
+    "        authors.sample(3), favorites.sample(3),\n",
+    "        users.shape, books.shape, \n",
+    "        authors.shape, favorites.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74922cdc",
+   "metadata": {},
+   "source": [
+    "<mark><u>**Comment:**</u>\n",
+    "\n",
+    "<font color='dodgerblue' size=4><i>\n",
+    "All of our csv files appear to have loaded correctly.  It looks like these are just initial csvs provided to start designing the database.\n",
+    "</i></font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "918b1e7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Engine(mysql+pymysql://root:***@localhost/books)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connecting to the database\n",
+    "connection = 'mysql+pymysql://root:carbonfiber99@localhost/books'\n",
+    "\n",
+    "# creating the engine\n",
+    "engine = create_engine(connection)\n",
+    "\n",
+    "# confirming engine\n",
+    "engine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d290e47",
+   "metadata": {},
+   "source": [
+    "## Creating the Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a99a867f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create database with if/else\n",
+    "if database_exists(connection) == False:\n",
+    "    create_database(connection)\n",
+    "else:\n",
+    "    print('Database already exists')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83978cc8",
+   "metadata": {},
+   "source": [
+    "<mark><u>**Comment:**</u>\n",
+    "\n",
+    "<font color='dodgerblue' size=4><i>\n",
+    "This was successful (verified in MySQL Workbench)\n",
+    "</i></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70b1835d",
+   "metadata": {},
+   "source": [
+    "### Adding the dfs to the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1a7f3138",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id first_name  last_name                 email\n",
+      "0   1       John        Doe          JD@books.com\n",
+      "1   2      Robin      Smith       Robin@books.com\n",
+      "2   3     Gloria  Rodriguez  grodriquez@books.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(users.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "76b5b6d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adding to database as sql\n",
+    "users.to_sql('users', engine, if_exists='replace')\n",
+    "books.to_sql('books', engine, if_exists='replace')\n",
+    "authors.to_sql('authors', engine, if_exists='replace')\n",
+    "favorites.to_sql('favorites', engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a40735c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tables_in_books</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>authors</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>books</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>favorites</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>users</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Tables_in_books\n",
+       "0         authors\n",
+       "1           books\n",
+       "2       favorites\n",
+       "3           users"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verifying tables were added\n",
+    "q = 'show tables'\n",
+    "\n",
+    "pd.read_sql(q, engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a76a8a3",
+   "metadata": {},
+   "source": [
+    "<mark><u>**Comment:**</u>\n",
+    "\n",
+    "<font color='dodgerblue' size=4><i>\n",
+    "Looks like everything worked, \n",
+    "</i></font>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faadfa63",
+   "id": "9d6574c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,9 +606,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "165px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
