--- a/C.Peace_Books.ipynb
+++ b/C.Peace_Books.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b2380bf",
+   "id": "a1442de0",
    "metadata": {},
    "source": [
     "## Imports"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecdafcad",
+   "id": "72bdf866",
    "metadata": {},
    "source": [
     "## Loading Data, Viewing the data"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "712b7ec7",
+   "id": "e7fce016",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74922cdc",
+   "id": "a938711c",
    "metadata": {},
    "source": [
     "<mark><u>**Comment:**</u>\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "918b1e7c",
+   "id": "159b9105",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d290e47",
+   "id": "8c7f4f99",
    "metadata": {},
    "source": [
     "## Creating the Database"
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a99a867f",
+   "id": "39c8c017",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83978cc8",
+   "id": "07a7f7f0",
    "metadata": {},
    "source": [
     "<mark><u>**Comment:**</u>\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b1835d",
+   "id": "f3aa1428",
    "metadata": {},
    "source": [
     "### Adding the dfs to the database"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1a7f3138",
+   "id": "92fb734c",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "76b5b6d3",
+   "id": "0beda742",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a40735c2",
+   "id": "beacbe11",
    "metadata": {},
    "outputs": [
     {
@@ -560,23 +560,170 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a76a8a3",
+   "id": "45fce518",
    "metadata": {},
    "source": [
     "<mark><u>**Comment:**</u>\n",
     "\n",
     "<font color='dodgerblue' size=4><i>\n",
-    "Looks like everything worked, \n",
+    "Looks like everything worked, I have also verified that the changes took effect through MySQL Workbench\n",
     "</i></font>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d6574c2",
+   "cell_type": "markdown",
+   "id": "fefb883f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Verifying with a set query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "035b891c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Shining</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>It</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Great Gatsby</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              title  user_id\n",
+       "0       The Shining        1\n",
+       "1                It        1\n",
+       "2  The Great Gatsby        1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# query to verify everything is working\n",
+    "q = '''\n",
+    "SELECT \n",
+    "    b.title, \n",
+    "    f.user_id\n",
+    "FROM books as b\n",
+    "JOIN favorites as f\n",
+    "    ON b.id = f.book_id\n",
+    "WHERE f.user_id = \n",
+    "    (SELECT users.id \n",
+    "    FROM users \n",
+    "    WHERE (users.last_name = \"Doe\" AND users.first_name = \"John\"))\n",
+    "'''\n",
+    "pd.read_sql(q, engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bc7804a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>JD@books.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  id first_name last_name         email\n",
+       "0      0   1       John       Doe  JD@books.com"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verifying we have the correct user_id\n",
+    "q = '''\n",
+    "select *\n",
+    "from users\n",
+    "where last_name like 'doe'\n",
+    "'''\n",
+    "pd.read_sql(q, engine)"
+   ]
   }
  ],
  "metadata": {
